@@ -150,6 +150,7 @@ public class NodeTool
                 ProxyHistograms.class,
                 Rebuild.class,
                 Refresh.class,
+                RefreshSizeEstimates.class,
                 RemoveToken.class,
                 RemoveNode.class,
                 Repair.class,
@@ -1800,6 +1801,16 @@ public class NodeTool
         {
             checkArgument(args.size() == 2, "refresh requires ks and cf args");
             probe.loadNewSSTables(args.get(0), args.get(1));
+        }
+    }
+
+    @Command(name = "refreshsizeestimates", description = "Refresh system.size_estimates")
+    public static class RefreshSizeEstimates extends NodeToolCmd
+    {
+        @Override
+        public void execute(NodeProbe probe)
+        {
+            probe.refreshSizeEstimates();
         }
     }
 
