@@ -1,4 +1,5 @@
 2.1.9
+ * Add new nodetool command to refresh size_estimates (CASSANDRA-9579)
  * (cqlsh) Allow encoding to be set through command line (CASSANDRA-10004)
  * Add new JMX methods to change local compaction strategy (CASSANDRA-9965)
  * Write hints for paxos commits (CASSANDRA-7342)
